Fix video not fitting whole screen on different devices

--- a/src/components/VideoContainer/VideoContainer.scss
+++ b/src/components/VideoContainer/VideoContainer.scss
@@ -40,7 +40,7 @@
 
   &__video {
     position: absolute;
-    max-width: 100vw;
+    // max-width: 100vw;
     object-fit: cover;
   }
 }
